--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       text-decoration: none;
     }
     .hero {
-      background: url('portonmatic-hero.jpg') center/cover no-repeat;
+      background: url('fondo.jpg') center/cover no-repeat;
       height: 70vh;
       display: flex;
       flex-direction: column;
@@ -40,10 +40,12 @@
     .hero h1 {
       font-size: 2.5rem;
       margin-bottom: 10px;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
     }
     .hero p {
       font-size: 1.2rem;
       margin-bottom: 20px;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
     }
     .btn {
       background-color: #FFD600;
