--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       text-decoration: none;
     }
     .hero {
-      background: url('5f57b29a-be5a-4b06-98e5-adaa4aeac0c6.png') center/cover no-repeat;
+       background: url('fondo.jpg') center/cover no-repeat;
       height: 70vh;
       display: flex;
       flex-direction: column;
@@ -140,3 +140,4 @@
   </footer>
 </body>
 </html>
+
