--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portonmatic - Seguridad integral para tu comunidad</title>
+  <title>Portonmatic SpA - Seguridad integral para tu comunidad</title>
   <style>
     body {
       margin: 0;
@@ -103,11 +103,11 @@
 
   <section id="nosotros">
     <h2>Quiénes somos</h2>
-    <p>Portonmatic es una empresa chilena dedicada a brindar soluciones completas de seguridad para condominios, pasajes y propiedades particulares. Combinamos automatización, tecnología y robustez para tu tranquilidad.</p>
+    <p>Portonmatic SpA es una empresa chilena dedicada a brindar soluciones completas de seguridad para condominios, pasajes y propiedades particulares. Combinamos automatización, tecnología y robustez para tu tranquilidad.</p>
   </section>
 
   <section id="servicios">
-    <h2>Nuestros servicios</h2>
+    <h2>Nuestros productos y servicios</h2>
     <div class="services">
       <div class="card">Portones eléctricos correderos y batientes</div>
       <div class="card">Cercos eléctricos y mallas de seguridad</div>
@@ -130,15 +130,17 @@
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>Teléfonos: +56 9 9412 4894 / +56 9 3668 0868</p>
+    <p>Teléfonos: +56 9 9412 4894</p>
+    <p>Teléfonos: +56 9 3668 0868</p>
     <p>Email: contacto@portonmatic.cl</p>
     <p>Web: www.portonmatic.cl</p>
   </section>
 
   <footer>
-    <p>Portonmatic - Tu seguridad, nuestra misión. © 2025</p>
+    <p>Portonmatic SpA - Tu seguridad, nuestra misión. © 2025</p>
   </footer>
 </body>
 </html>
+
 
 
