--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
   <header>
-    <img src="logo-portonmatic.png" alt="Portonmatic Logo" />
+    <img src="logo.png" alt="Portonmatic Logo" />
     <nav>
       <a href="#inicio">Inicio</a>
       <a href="#servicios">Servicios</a>
