--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <section id="servicios">
     <h2>Nuestros productos y servicios</h2>
     <div class="services">
-      <div class="card">Portones eléctricos correderos y batientes</div>
+      <div class="card">Portones eléctricos correderos, batientes y autoportantes</div>
       <div class="card">Cercos eléctricos y mallas de seguridad</div>
       <div class="card">Puertas blindadas</div>
       <div class="card">Luminarias LED para perímetros</div>
@@ -141,6 +141,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
