--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="card">Portones eléctricos correderos, batientes y autoportantes</div>
       <div class="card">Cercos eléctricos y mallas de seguridad</div>
       <div class="card">Puertas blindadas</div>
-      <div class="card">Luminarias LED para perímetros</div>
+      <div class="card">Postaciones y luminarias LED para perímetros</div>
       <div class="card">Cámaras de seguridad y sistemas DVR</div>
       <div class="card">Citofonía y videoporteros</div>
     </div>
@@ -141,6 +141,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
