--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
       border-radius: 10px;
       text-align: center;
     }
+    .card img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
     footer {
       background-color: #0A1F44;
       color: white;
@@ -103,37 +110,103 @@
 
   <section id="nosotros">
     <h2>Quiénes somos</h2>
-    <p>Portonmatic SpA es una empresa chilena dedicada a brindar soluciones completas de seguridad para condominios, pasajes y propiedades particulares. Combinamos automatización, tecnología y robustez para tu tranquilidad.</p>
+    <p>Portonmatic SpA, es una empresa chilena dedicada a brindar soluciones completas de seguridad para condominios, pasajes y propiedades particulares. Combinamos automatización, tecnología y robustez para tu tranquilidad.</p>
   </section>
 
   <section id="servicios">
     <h2>Nuestros productos y servicios</h2>
     <div class="services">
-      <div class="card">Portones eléctricos correderos, batientes y autoportantes</div>
-      <div class="card">Cercos eléctricos y mallas de seguridad</div>
-      <div class="card">Puertas blindadas domiciliarias, institucionales y comerciales</div>
-      <div class="card">Postaciones y luminarias LED para perímetros</div>
-      <div class="card">Cámaras de seguridad y sistemas DVR</div>
-      <div class="card">Citofonía y videoporteros</div>
+      <div class="card">
+        <img src="porton_1.png" alt="Portones Eléctricos" />
+	Portones eléctricos correderos, batientes y autoportantes
+      </div>
+      
+      <div class="card">
+	<img src="perimetral.png" alt="Cercos Eléctricos" />
+	Cercos eléctricos y mallas de seguridad
+      </div>
+      	
+      <div class="card">
+	<img src="domiciliaria.png" alt="Puertas blindadas" />
+	Puertas blindadas domiciliarias, institucionales y comerciales
+      </div>
+	
+
+      <div class="card">
+        <img src="rural_4.png" alt="Luminaria LED" />
+	Postaciones y luminarias LED para perímetros
+      </div>
+
+      <div class="card">
+        <img src="exterior.png" alt="Video Vigilancia Exterior" />
+	Cámaras de seguridad y sistemas DVR
+      </div>
+
+      <div class="card">
+        <img src="edificio.png" alt="Citofonía y Video Porteros" />
+	Citofonía y videoporteros
+      </div>
+
+      <div class="card">
+        <img src="Instalaciones_Eléctricas/tablero_2.png" alt="Instalaciones Eléctricas Certificadas" />
+	Instalaciones Eléctricas Certificadas
+      </div>
+
+      <div class="card">
+        <img src="programa_2.png" alt="Servicio Técnico y Programación" />
+	Servicio Técnico y Programación
+      </div>
+
+      <div class="card">
+        <img src="oocc_4.png" alt="Proyectos en Ejecución" />
+	Proyectos en Ejecución
+      </div>
+
     </div>
   </section>
 
   <section id="beneficios">
     <h2>¿Por qué elegirnos?</h2>
     <div class="benefits">
-      <div class="card">Respuesta rápida</div>
-      <div class="card">Proyectos a medida</div>
-      <div class="card">Soporte técnico garantizado</div>
-      <div class="card">Experiencia en comunidades y condominios</div>
-    </div>
+      <div class="card">
+	<img src="Movil_de_Respuesta.png" alt="Móvil de Respuesta" />
+	Respuesta rápida
+      </div>
+
+      <div class="card">
+	<img src="oocc_6.png" alt="Proyectos a medida" />
+    	Proyectos a medida
+      </div>
+
+      <div class="card">
+	<img src="programa_1.png" alt="Servicio Técnico garantizado" />
+	Servicio técnico garantizado
+      </div>
+
+      <div class="card">
+	<img src="rural_3.png" alt="Experiencia en comunidades y condominios" />
+	Experiencia en comunidades y condominios</div>
+      </div>
   </section>
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>Teléfonos: +56 9 9412 4894</p>
-    <p>Teléfonos: +56 9 3668 0868</p>
-    <p>Email: contacto@portonmatic.cl</p>
-    <p>Web: www.portonmatic.cl</p>
+    <p>
+      <img src="whatsapp.png" alt="WhatsApp" style="width:20px; vertical-align:middle; margin-right:5px;" />
+       +56 9 9412 4894
+    </p>
+    <p>
+      <img src="celular.png" alt="Celular" style="width:20px; vertical-align:middle; margin-right:5px;" />
+       +56 9 3668 0868
+    </p>
+    <p>
+      <img src="e_mail.png" alt="e-mail: " style="width:20px; vertical-align:middle; margin-right:5px;" />
+       contacto@portonmatic.cl
+    </p>
+    <p>
+      <img src="web.png" alt="WWW: " style="width:20px; vertical-align:middle; margin-right:5px;" />
+       www.portonmatic.cl
+    </p>
   </section>
 
   <footer>
