--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </section>
 
   <section id="servicios">
-    <h2>Nuestros productos y servicios</h2>
+    <h2>Nuestros Productos y Servicios</h2>
     <div class="services">
       <div class="card">
         <img src="porton_1.png" alt="Portones Eléctricos" />
