--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+lo<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -201,7 +201,7 @@
       </div>
 
       <div class="card">
-        <img src="Instalaciones_Eléctricas/tablero_2.png" alt="Instalaciones Eléctricas Certificadas" />
+        <img src="tablero_2.png" alt="Instalaciones Eléctricas Certificadas" />
 	Instalaciones Eléctricas Certificadas
       </div>
 
@@ -287,4 +287,5 @@
     setInterval(() => showSlide(index + 1), 5000); // Auto deslizado cada 5 segundos
   </script>
 </body>
+
 </html>
