--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
       Sistemas de botón de pánico para seguridad comunitaria
     </div>
 
+    <div class="card">
+      <img src="estructuras.png">
+      Elementos estructurales Metálicos de refuerzo para accesos
+    </div>
+	
   </div>
 </section>
 
