--- a/index.html
+++ b/index.html
@@ -256,10 +256,26 @@
 <section id="beneficios">
   <h2>¿Por qué elegirnos?</h2>
   <div class="benefits">
-    <div class="card">Respuesta rápida</div>
-    <div class="card">Proyectos a medida</div>
-    <div class="card">Servicio técnico garantizado</div>
-    <div class="card">Experiencia en comunidades</div>
+    <div class="card">
+      <img src="Movil_de_Respuesta.png">
+      Respuesta rápida
+    </div>
+
+    <div class="card">
+      <img src="oocc_6.png">
+      Proyectos a medida
+    </div>
+
+    <div class="card">
+      <img src="programa_1.png">
+      Servicio técnico garantizado
+    </div>
+
+    <div class="card">
+      <img src="rural_3.png">
+      Experiencia en comunidades
+    </div>
+
   </div>
 </section>
 
